* Fixed my bug caused by altering the unfilter function within the code [pyborg.py]
* Fixed a potential bug and fixed stealth mode code [pyborg-irc.py & pyborg-im.py]
* Added the !learn and !teach command and the learning system to make them work [pyborg.py]
* Extended new learning system by adding the !forget and !find commands [pyborg.py]
* Slightly faster response time for learned responses (.05 faster than normal) [pyborg.py]
* Added a punctuation clean up regex for keys used in the learning system so we get better matches overall [pyborg.py]
* Added the !responses command to show how many responses the bot has learned so far [pyborg.py]
* Altered the auto-optimise function to only purge every day and rebuilddict every week to avoid db corruption [pyborg.py]
* Changed the response times again and forced limit of 8 seconds for responses over 40 characters long [pyborg.py]
* Messed with the purge, save and rebuilddict times again. Now every 4 hours, 2 hours and 3 days respectively [pyborg.py]
* Added a little protection for the known #nick teach bug... [pyborg.py]
* Altered the default created entry when there is no qdb.dat to be more functional (it works with hello now ;)) [pyborg.py]
* Alia now responds when her nick is used in actions! [pyborg-irc.py]
* Alia can now learn and respond with actions! [pyborg-irc.py & pyborg.py]
* Made commands used in a channel not suffer the dreaded #nick replacement issue [pyborg-irc.py]
* Added in some clever #nick replacement tricks to broaden Alia's nick centric responses & cleaned up some bad code [pyborg-irc.py]
* You don't want it to replace Alia with #nick in Private messages... [pyborg-irc.py]
* Made longer responses have a maximum of 5 seconds delay before being said [pyborg.py]
* Unfiltering the teach system's responses like it was supposed to... [pyborg.py]
* Responds to the lowercase version of own nickname because people don't use Tab auto-completion [pyborg-irc.py]