@@ -62,5 +62,10 @@ Initial release
 * Added in some clever #nick replacement tricks to broaden Alia's nick centric responses & cleaned up some bad code [pyborg-irc.py]
 * You don't want it to replace Alia with #nick in Private messages... [pyborg-irc.py]
 * Made longer responses have a maximum of 5 seconds delay before being said [pyborg.py]
-* Unfiltering the teach system's responses like it was supposed to... [pyborg.py]
+* Unfiltering the teach system's responses like it was supposed to [pyborg.py]
 * Responds to the lowercase version of own nickname because people don't use Tab auto-completion [pyborg-irc.py]
+* Split auto-rebuild functions into it's own function in preparation for the new timers system [pyborg.py]
+* Made the timers threaded for purging, saving and rebuilding of database [pyborg.py]
+* Change Timers time for saving, purging and rebuilddic to every 2 hours 5 minutes, 5 hours and 3 days 1 hour respectively - This is to avoid them clashing with each other [pyborg.py]
+* Fixed the locale characters stripping issue by making the regex only strip mIRC control codes [pyborg.py]
+* Added a check for empty nicknames with the new 'smart' replacement trick [pyborg-irc.py]
